k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-backend
  namespace: hotel-booking
spec:
  selector:
    app: spring-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
