k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-backend
  labels:
    app: spring-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-backend
  template:
    metadata:
      labels:
        app: spring-backend
    spec:
      containers:
        - name: spring-backend
          image: REPOSITORY/IMAGE_NAME:TAG
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: spring-backend
spec:
  selector:
    app: spring-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-backend
  annotations:
    traefik.ingress.kubernetes.io/router.tls.certresolver: "le"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  rules:
    - host: api-hotel-booking.molika.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-backend
                port:
                  number: 80
