k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-backend
  namespace: hotel-booking
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "le"
spec:
  ingressClassName: traefik
  rules:
    - host: api-hotel-booking.molika.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-backend
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-backend-redirect
  namespace: hotel-booking
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
    traefik.ingress.kubernetes.io/router.middlewares: "hotel-booking-redirect-https@kubernetescrd"
spec:
  ingressClassName: traefik
  rules:
    - host: api-hotel-booking.molika.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-backend
                port:
                  number: 8080
